--- a/artist-statement.html
+++ b/artist-statement.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Official Portfolio Website of Steven Nguyen</title>
   <meta charset="utf-8">
@@ -11,34 +12,36 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="main_nav">
-<ul class="navbar-nav">
-	<li class="nav-item"> <a class="nav-link" href="index.html">Home </a> </li>
-	<li class="nav-item active"><a class="nav-link" href="artist-statement.html"> Artist Statement </a></li>
-	<li class="nav-item dropdown">
-	   <a class="nav-link  dropdown-toggle" href="#" data-toggle="dropdown">Art 107 Projects</a>
-	    <ul class="dropdown-menu">
-		    <li><a class="dropdown-item" href="page9.html">Gym Life Shenanigans: Episode 3</a></li>
-		    <li><a class="dropdown-item" href="page10.html">Gym Life Shenanigans: Episode 4</a></li>
-	    </ul>
-  </div> <!-- navbar-collapse.// -->
-</nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="main_nav">
+      <ul class="navbar-nav">
+        <li class="nav-item"> <a class="nav-link" href="index.html">Home </a> </li>
+        <li class="nav-item active"><a class="nav-link" href="artist-statement.html">Artist Statement </a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link  dropdown-toggle" href="#" data-toggle="dropdown">Art 107 Projects</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="page9.html">Gym Life Shenanigans: Episode 3</a></li>
+            <li><a class="dropdown-item" href="page10.html">Gym Life Shenanigans: Episode 4</a></li>
+          </ul>
+    </div> <!-- navbar-collapse.// -->
+  </nav>
 
-<div class="container">
-	  <h1 class="welcome">Artist Statement</h1>
-<p class="statement">Welcome to My Official Artist Portfolio Website!
+  <div class="container">
+    <h1 class="welcome">Artist Statement</h1>
+    <p class="statement">Welcome to My Official Artist Portfolio Website!
 
-  <h4>This website showcases my collection of digital media arts, from digital imagery to web development. The software applications that I use range from Adobe Photoshop to Audacity. With these digital artworks, I will show a digital online art exhibition that will give the audience or viewer a combined emotional feeling of color, humor, exhilaration, and most of all entertainment.  You will explore a variety of mediums, from different sounds to Virtual Reality.
-During the development stages of working on these projects, I came to an epiphany of what my interest and future goals would be. My main interests are computer programming and video production.  Besides reaching my dream goal to become a professional digital media artist, I want to motivate and help other artists and non-artists alike. Famous digital media artist that have inspired me to pursue my dream are Takeshi Murata, Nam Jun Paik, and Mary Ellen Bute.  If someone were to ask me what my “ultimate” goal of becoming an artist would be, my answer would be to become a movie director. Well-known film directors like James Wan, Justin Lin, and Christopher Nolan have inspired me to pursue video editing and film production. My overall message or main theme that I want to give the audience or the viewers through my artworks are morals and life lessons.
- Positvity will basically be the easter egg in most of my pieces.</h4>
+      <h4>Howdy! Welcome to my ART107 Class from SJSU Portfolio! You will see all collection of my digial art works from ART 107 Class. For the
+        main page I have a snapshot of an abstract object at night, which I created from the Blender Software. The other pages are videos from my Gym Life Shenanigans
+        series.  I will update this portfolio when time progresses.</h4>
 
-  <h4>I hope you enjoy exploring my digital artworks and THANKS FOR VISITING MY PORTFOLIO WEBSITE!</h4>
-</div>
-<div class="copyright">© Copyright 2020.</div>
+      <h4>I hope you enjoy exploring my digital artworks and THANKS FOR VISITING MY PORTFOLIO WEBSITE!</h4>
+  </div>
+  <div class="copyright">© Copyright 2020.</div>
 </body>
+
 </html>
